changed language bug that came with implementation not adapting to remote hosted and set overflowx to hidden

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,6 +3,7 @@ html, body {
   background: var(--bg);
   margin: 0 ;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 
   /* VARIABLES */
   --pink: #D3869B;
